<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="dashboard">Dashboard</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="edit">Edit</string>
    <string name="nomor_induk_pns">Nomor Induk PNS</string>
    <string name="nip">NIP</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="password">Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
</resources>