<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/nomor_induk_pns"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_nippetugas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/nip"
            android:editable="false"
            android:inputType="number"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/nama_lengkap"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_namapetugas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/nama_lengkap"
            android:inputType="textPersonName"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/nomor_hp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_nohppetugas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/nomor_hp"
            android:inputType="number"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/konfirmasi_password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_konfirmasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/konfirmasi_password"
            android:inputType="textPassword"
            android:padding="8dp" />

        <Button
            android:id="@+id/button_editpetugas"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/button_login"
            android:text="@string/edit" />

    </LinearLayout>

</ScrollView>